Setup button event handler

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
       value=""
     />
 
-    <button>Start Kasu</button>
+    <button onclick="onKasuStart()">Start Kasu</button>
   </body>
 </html>
