--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title></title>
     <meta charset="UTF-8" />
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <meta
-      http-equiv="X-Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <title>Kasu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="/src/style.css" rel="stylesheet" />
   </head>
-  <body>
-    <h1>Hello from Electron renderer!</h1>
-  </body>
+  <body></body>
 </html>
