Update styles things

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,14 @@
   </head>
   <body>
     <h1>Kasu</h1>
+
+    <input type="text" name="serverIP" placeholder="Server IP" value="" />
+    <input type="text" name="serverPort" placeholder="Server Port" value="" />
+    <input
+      type="text"
+      name="email"
+      placeholder="Your Microsoft email (the account must own Minecraft)"
+      value=""
+    />
   </body>
 </html>
