Added "Start Kasu" button

--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,7 @@
       placeholder="Your Microsoft email (the account must own Minecraft)"
       value=""
     />
+
+    <button>Start Kasu</button>
   </body>
 </html>
