--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="style.css" rel="stylesheet" />
-    <script src="index.js"></script>
+    <script defer src="index.js"></script>
   </head>
   <body>
     <h1>Kasu</h1>
 
-    <input type="text" name="serverIP" placeholder="Server IP" value="" />
-    <input type="text" name="serverPort" placeholder="Server Port" value="" />
+    <input
+      type="text"
+      name="serverIP"
+      placeholder="Server IP"
+      id="serverIP"
+      value=""
+    />
+    <input
+      type="text"
+      name="serverPort"
+      placeholder="Server Port"
+      id="serverPort"
+      value=""
+    />
     <input
       type="text"
       name="email"
+      id="userEmail"
       placeholder="Your Microsoft email (the account must own Minecraft)"
       value=""
     />
