Moved status label functions to their own module

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="style.css" rel="stylesheet" />
     <script defer src="index.js"></script>
+    <script defer src="util/statusLabels.js"></script>
   </head>
   <body>
     <h1>Kasu</h1>
